2 mesa water frontend changes: fix image align margins

--- a/web/themes/civic/src/scss/partials/global/_layout.scss
+++ b/web/themes/civic/src/scss/partials/global/_layout.scss
@@ -146,3 +146,10 @@ body {
   display: block;
 }
 
+img.align-left {
+  margin-right: 15px;
+}
+
+img.align-right {
+  margin-left: 15px;
+}
